# AlphaComposition

./: CMakeLists.txt  README.md  main.cpp
AlphaBlendTests/: parallelAlphaBlend.h
AlphaCompositionC++/: CMakeLists.txt  main.cpp
AlphaCompositionC++/AlphaBlendTests/: parallelAlphaBlend.h  sequentialAlphaBlend.h
AlphaCompositionC++/RGBAImage/: RGBAimage.cpp  RGBAimage.h  imageReconstruction.h
AlphaCompositionPython/: main.py
AlphaCompositionPython/AlphaBlendTests/: parallelAlphaBlend.py  sequentialAlphaBlend.py
AlphaCompositionPython/RGBAImage/: RGBAimage.py  createMixedImage.py  imageReconstruction.py
AlphaCompositionPython/results/: readme.md
RGBAImage/: RGBAimage.cpp  RGBAimage.h  imageReconstruction.h
tests/: parallel_alpha_blend.h  sequential_alpha_blend.h
