cmake_minimum_required(VERSION 3.23)
project(AlphaComposition)
message(STATUS "Checking OpenMP")
find_package(OpenMP)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE-DIRECTORIES})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
add_executable(alpha_composition main.cpp RGBAImage/RGBAimage.h RGBAImage/RGBAimage.cpp tests/parallel_alpha_blend.h tests/sequential_alpha_blend.h RGBAImage/imageReconstruction.h)
target_link_libraries(alpha_composition ${OpenCV_LIBS})
